--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@
   margin-top: 20px;
   padding: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.7);
+  cursor: pointer;
 }
 button:disabled {
   cursor: not-allowed;
